--- a/landing/templates/footer.html
+++ b/landing/templates/footer.html
@@ -15,7 +15,7 @@
 
         <div class="row footer-newsletter justify-content-center">
           <div class="col-lg-6">
-            <form action="" method="post">
+            <form action="/" method="post">
               {% csrf_token %}
               {{ suscriptionForm.email }}<input type="submit" value="Suscribirme">
               <!--<input type="email" name="email" placeholder="Ingresa tu email"><input type="submit" value="Suscribirme">-->
