--- a/landing/templates/sections/contact.html
+++ b/landing/templates/sections/contact.html
@@ -42,7 +42,7 @@
 
             </div>
         <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-          <form action="" method="post" role="form" class="php-email-form">
+          <form action="/thanks" method="post" role="form" class="php-email-form">
             {% csrf_token %}
             <div class="form-row">
               <div class="form-group col-md-6">
