--- a/landing/templates/sections/contact.html
+++ b/landing/templates/sections/contact.html
@@ -5,7 +5,7 @@
       <div class="section-title">
         <span>Contacto</span>
         <h2>Contacto</h2>
-        <p>¡Hablemos! Sobre ti, tu empresa, nosotros, nuestros productos u otros problemas en los que te podamos ayudar.</p>
+        <p>¿Interesado? ¡Contactanos!</p>
       </div>
 
       <div class="row">
