--- a/landing/templates/header.html
+++ b/landing/templates/header.html
@@ -12,6 +12,8 @@
           <li class="active"><a href="#hero">Home</a></li>
           <li><a href="#services">Como Funciona</a></li>
           <li><a href="#contact">Contacto</a></li>
+          <li><a href="/accounts/logout/?next=/pr">Ingresa!</a></li>
+          <!-- <li><a href="/pr/register">Registrate</a></li>para mas adelante -->
 
         </ul>
       </nav><!-- .nav-menu -->
